--- a/data-pipelines/dags/kafka-app/Dockerfile
+++ b/data-pipelines/dags/kafka-app/Dockerfile
@@ -3,8 +3,8 @@ FROM python:3.9-slim
 # הגדרת ספריית עבודה
 WORKDIR /app
 
-# העתקת קובץ requirements לקונטיינר
-COPY requirements.txt .
+# העתקת קובץ requirements לקונטיינר (נתיב יחסי, אם הקובץ נמצא באותו נתיב כמו ה-Dockerfile)
+COPY ./requirements.txt .
 
 # התקנת התלויות
 RUN pip install --no-cache-dir -r requirements.txt
@@ -14,4 +14,3 @@ COPY . .
 
 # פקודת ברירת מחדל להפעלת האפליקציה
 CMD ["python", "kafka_to_rds.py"]
-
