--- a/data-pipelines/dags/kafka-app/Dockerfile
+++ b/data-pipelines/dags/kafka-app/Dockerfile
@@ -1,13 +1,16 @@
 FROM python:3.9-slim
 
-# העתקת קובץ requirements לקונטיינר (נתיב יחסי, אם הקובץ נמצא באותו נתיב כמו ה-Dockerfile)
-COPY requirements.txt .
+# העתקת קובץ requirements לקונטיינר
+COPY requirements.txt ./
 
 # התקנת התלויות
 RUN pip install --no-cache-dir -r requirements.txt
 
 # העתקת קוד האפליקציה לקונטיינר
-COPY . .
+COPY . /app
+
+# הגדרת תיקיית עבודה
+WORKDIR /app
 
 # פקודת ברירת מחדל להפעלת האפליקציה
 CMD ["python", "kafka_to_rds.py"]
