--- a/data-pipelines/dags/spark-app/Dockerfile
+++ b/data-pipelines/dags/spark-app/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.9-slim
 
 # העתקת קובץ requirements לקונטיינר
-COPY requirements_spark_batch_job.txt ./
+COPY requirements.txt ./
 
 # התקנת התלויות
-RUN pip install --no-cache-dir -r requirements_spark_batch_job.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # התקנה של Airflow, Kubernetes ו-PySpark
 RUN pip install apache-airflow==2.4.0 kubernetes pyspark
