--- a/data-pipelines/dags/kafka-app/Dockerfile
+++ b/data-pipelines/dags/kafka-app/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.9-slim
 
-# העתקת קובץ requirements לקונטיינר
-COPY requirements.txt ./
+# העתקת קובץ requirements.txt לקונטיינר
+COPY requirements.txt /app/requirements.txt
 
 # התקנת התלויות
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # העתקת קוד האפליקציה לקונטיינר
 COPY . /app
