--- a/data-pipelines/dags/rds-app/requirements.txt
+++ b/data-pipelines/dags/rds-app/requirements.txt
@@ -1,6 +1,6 @@
 # RDS to Redshift requirements
 apache-airflow==2.4.0
-apache-airflow-providers-amazon==2.4.0  # תוסף לאינטגרציה עם AWS
-psycopg2==2.9.3
+apache-airflow-providers-amazon==2.4.0
+psycopg2-binary==2.9.3  # השתמש בגרסה הבינארית
 boto3==1.20.10
 requests==2.26.0
