--- a/data-pipelines/dags/rds-app/Dockerfile
+++ b/data-pipelines/dags/rds-app/Dockerfile
@@ -1,12 +1,6 @@
 # השתמש בתמונה עם Python 3.9 (סלימית)
 FROM python:3.9-slim
 
-# עדכון החבילות והתקנת תלויות סיסטם (ל-psycopg2)
-RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    gcc \
-    && apt-get clean
-
 # יצירת תיקיית עבודה בקונטיינר
 WORKDIR /app
 
@@ -16,8 +10,8 @@ COPY requirements.txt ./
 # התקנת התלויות מתוך requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# התקנת Apache Airflow גרסה 2.4.0 יחד עם psycopg2 ו-boto3 אם לא הותקנו ב-requirements
-RUN pip install apache-airflow==2.4.0 psycopg2 boto3
+# התקנת Apache Airflow גרסה 2.4.0 אם לא הותקנה ב-requirements
+RUN pip install apache-airflow==2.4.0
 
 # חשיפת פורט 8084 לשימוש
 EXPOSE 8084
