--- a/data-pipelines/dags/rds-app/requirements.txt
+++ b/data-pipelines/dags/rds-app/requirements.txt
@@ -2,5 +2,5 @@
 apache-airflow==2.4.0
 apache-airflow-providers-amazon==2.4.0
 psycopg2-binary==2.9.3  # השתמש בגרסה הבינארית
-boto3==1.18.0
+boto3
 requests==2.26.0
