--- a/data-pipelines/dags/spark-app/Dockerfile
+++ b/data-pipelines/dags/spark-app/Dockerfile
@@ -3,13 +3,10 @@ FROM python:3.9-slim
 # העתקת קובץ requirements לקונטיינר
 COPY requirements.txt ./
 
-# התקנת התלויות
+# התקנת התלויות מתוך requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# התקנה של Airflow, Kubernetes ו-PySpark
-RUN pip install apache-airflow==2.4.0 kubernetes pyspark
-
-# חשיפת פורט
+# חשיפת פורט 8080 (ל-Airflow)
 EXPOSE 8080
 
 # פקודת ברירת מחדל להפעלת האפליקציה
