--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
       - 'data-pipeline/dags/rds-app/**'
       - 'data-pipeline/dags/spark-app/**'
       - '.github/workflows/**'
+      - 'infra/**'
 
 jobs:
   build-and-push:
@@ -20,6 +21,21 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.0
+
+      - name: Terraform Init & Apply
+        run: |
+          cd infra/environoments/dev
+          terraform init
+          terraform apply -auto-approve
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-2
 
       - name: Build Docker images for kafka-app
         run: |
